# fip

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: bc_kernel_gen.cpp  bc_kernel_gen.h  boundary_condition.cpp  boundary_condition.h  enumhelper.h  imgui_impl_opengl3.cpp  kernels.cu  kernels.h  main.cpp  orbit_camera.h  shaders.h  simdata.cpp  simdata.h  timeseries.cpp  timeseries.h  utils.h  vis.cpp  vis.h
